feat: harden backend migration baseline